--- a/src/less/post.less
+++ b/src/less/post.less
@@ -20,12 +20,20 @@
 			font-weight: 700;
 			font-size: 2em;
 			}
+
+			@media(max-width: 600px){
+				font-size: 1.8em;
+				}
 	}
 
 	.excerpt {
 		font-weight: 200;
-	 font-size: 1.3em;
+	 font-size: 1.5em;
 	 margin-top: 20px;
+	 @media(max-width: 800px){
+		 margin-top: 15px;
+		 font-size: 1.3em;
+	 }
 	}
 
 	h2 {
@@ -83,6 +91,8 @@
 		.meta-item {
 			margin: 0 20px 0 0;
 			float: left;
+			font-size: 1.2em;
+
 
 			&:last-child {
 				margin: 0;
@@ -183,7 +193,7 @@
 		margin: 0 80px;
 		/*border-bottom: 1px solid #eaeaea;*/
 		@media(max-width: 800px) {
-			margin: 0 25px;
+			margin: 0 15px;
 			border-bottom: 0;
 		}
 	}
@@ -204,6 +214,8 @@
 	    justify-content: space-between;
 	    padding: 0;
 	    width: 100%;
+			border-top: 1px solid #e8e8e8;
+    padding-top: 20px;
 		}
 
 		& > div {
@@ -341,7 +353,8 @@
                  font-size: 12px;
 
 								 @media(max-width: 800px){
-									     margin: 5px auto 40px;
+									     margin: 10px auto 40px;
+											 font-size:14px;
 								 }
                 }
 
@@ -581,7 +594,6 @@
 		h3 {
 			margin-top: 40px;
 			color: @text-post-header;
-			line-height: 1;
 		}
 
 
