--- a/src/less/post.less
+++ b/src/less/post.less
@@ -29,6 +29,7 @@
 		font-weight: 200;
 		font-size: 1.5em;
 		margin-top: 20px;
+		margin-bottom: 0;
 		@media(max-width: 800px) {
 			margin-top: 15px;
 			font-size: 1.3em;
@@ -621,8 +622,8 @@
 		figure {
 			width: fit-content;
 			margin: 40px auto;
-			@media(max-width: 800px) {
-				margin: 0 calc(50% - 50vw) !important;
+			@media(max-width: 600px) {
+				margin: 0 calc(~50% - 50vw) !important;
     		width: auto !important;
 
 				img {
