--- a/src/less/post.less
+++ b/src/less/post.less
@@ -623,7 +623,8 @@
 			width: fit-content;
 			margin: 40px auto;
 			@media(max-width: 600px) {
-				margin: 0 calc(~50% - 50vw) !important;
+				margin-left: calc(~"-50vw + 50%");
+    		margin-right: calc(~"-50vw + 50%");
     		width: auto !important;
 
 				img {
