--- a/src/less/post.less
+++ b/src/less/post.less
@@ -48,7 +48,6 @@
 		font-weight: 200 !important;
 		@media(max-width: 800px) {
 			font-size: 1.6em;
-			line-height: 1;
 			padding-bottom: 10px;
 		}
 	}
@@ -57,6 +56,10 @@
 		font-size: 1.5em;
 		line-height: 1.2;
 		color: #504f5f;
+	}
+
+	& > p {
+		text-align: justify;
 	}
 
 	blockquote {
@@ -162,6 +165,12 @@
 			font-size: 13px;
 			border: 1px solid #e5e9ef;
 			border-spacing: 0;
+
+			@media(max-width: 600px) {
+				margin-left: calc(~"-50vw + 50%");
+		    margin-right: calc(~"-50vw + 50%");
+		    width: 116%;
+			}
 
 			td,
 			th {
@@ -348,6 +357,7 @@
 		text-align: center;
 		margin: -10px auto 40px;
 		font-size: 12px;
+		color: #8c8c8c;
 		@media(max-width: 800px) {
 			margin: 10px auto 40px;
 			font-size: 14px;
@@ -631,7 +641,7 @@
 					width: 100%;
 					max-height: none;
 					margin: auto;
-					border: 1px solid #bcccd4;
+					border: 1px solid #e2e2e2;
 					border-left: 0;
 					border-right: 0;
 				}
