--- a/src/less/post.less
+++ b/src/less/post.less
@@ -58,7 +58,7 @@
 		color: #504f5f;
 	}
 
-	& > p {
+	p {
 		text-align: justify;
 	}
 
@@ -221,7 +221,9 @@
 			display: flex;
 			justify-content: space-between;
 			padding: 0;
-			width: 100%;
+			max-width: none;
+			width: auto;
+			margin: 0 30px;
 			border-top: 1px solid #e8e8e8;
 			padding-top: 20px;
 		}
