--- a/src/less/post.less
+++ b/src/less/post.less
@@ -210,6 +210,7 @@
 		margin: 0 80px;
 		color: #9ea1ab;
 		height: 20px;
+		max-width: 376px;
 
 		a,
 		span {
@@ -247,7 +248,7 @@
 		}
 		@media(max-width: 800px) {
 			width: auto;
-			max-width: 300px;
+			max-width: 350px;
 			margin: 0 auto;
 		}
 	}
@@ -285,6 +286,9 @@
 			margin-top: 8px;
 		}
 		@media(max-width: 800px) {
+			margin: 20px 40px 0;
+		}
+		@media(max-width: 600px) {
 			margin: 20px 25px 0;
 		}
 	}
@@ -528,7 +532,6 @@
 
 		.post-meta {
 			width: auto;
-			max-width: 376px;
 			margin: 15px 0 0;
 			font-size: 12px;
 			text-align: left;
