--- a/src/less/post.less
+++ b/src/less/post.less
@@ -18,7 +18,7 @@
 	.post-title {
 		@media(max-width: 800px) {
 			font-weight: 700;
-			font-size: 2em;
+			font-size: 2.4em;
 		}
 		@media(max-width: 600px) {
 			font-size: 1.8em;
@@ -28,7 +28,7 @@
 	.excerpt {
 		font-weight: 200;
 		font-size: 1.5em;
-		margin-top: 20px;
+		margin-top: 10px;
 		margin-bottom: 0;
 		@media(max-width: 800px) {
 			margin-top: 15px;
@@ -93,7 +93,7 @@
 		}
 
 		.meta-item {
-			margin: 0 20px 0 0;
+			margin: 0 30px 0 0;
 			float: left;
 			font-size: 1.2em;
 
@@ -211,7 +211,6 @@
 		margin: 0 80px;
 		color: #9ea1ab;
 		height: 20px;
-		max-width: 376px;
 
 		a,
 		span {
@@ -249,13 +248,14 @@
 		}
 		@media(max-width: 800px) {
 			width: auto;
-			max-width: 350px;
+			display: flex;
+			justify-content: space-between;
 			margin: 0 auto;
 		}
 	}
 
 	.post-content {
-		margin: 20px 80px 40px;
+		margin: 25px 80px 40px;
 
 		.kg-card-markdown > p {
 			text-align: justify;
