--- a/src/less/post.less
+++ b/src/less/post.less
@@ -44,11 +44,10 @@
 		font-family: montserrat;
 		font-size: 2.3em;
 		border-bottom: 1px solid #efefef;
-		padding-bottom: 20px;
+		padding-bottom: 10px;
 		font-weight: 300 !important;
 		@media(max-width: 800px) {
 			font-size: 1.6em;
-			padding-bottom: 10px;
 		}
 	}
 
@@ -60,6 +59,8 @@
 
 	p {
 		text-align: justify;
+		font-size: 18px;
+		line-height: 1.8 !important;
 	}
 
 	blockquote {
@@ -227,6 +228,7 @@
 			margin: 0 30px !important;
 			border-top: 1px solid #e8e8e8;
 			padding-top: 20px;
+			padding-bottom: 10px;
 		}
 
 		& > div {
@@ -422,6 +424,7 @@
 			font-weight: 100;
 			width: 100%;
 			clear: both;
+			font-size: 18px;
 		}
 
 		.author {
