--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -4,7 +4,7 @@
 	<article class="{{post_class}} post-preview{{!-- {{#has tag="video"}}fluid-width-video-wrapper{{/has}}--}}">
 		{{#if featured}}
 			<div class="featured">
-				<i class="fa fa-star"></i>
+				<i class="far fa-star"></i>
 			</div>
 		{{/if}}
 
@@ -32,7 +32,7 @@
 			<div class="post-permalink">
 				<div class="meta">
 					{{#primary_tag}}
-							<span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> {{name}}</span>
+							<span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> <span>{{name}}</span></span>
 					{{/primary_tag}}
 					{{#author}}
 						{{#unless profile_image}}
