--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -8,7 +8,7 @@
 	{{#is "post"}}
 		{{> widget-author}}
 	{{/is}}
-	{{#is "home"}}
+	{{#is "home,paged"}}
 		{{> widget-text}}
 	{{/is}}
 	{{^is "author"}}
