--- a/post.hbs
+++ b/post.hbs
@@ -22,7 +22,7 @@
 					</div>
 					<div class="post-meta">
 						{{#primary_tag}}
-								<span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> {{name}}</span>
+								<span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> <span>{{name}}</span></span>
 						{{/primary_tag}}
 						{{#author}}
 							{{#unless profile_image}}
