--- a/src/less/code.less
+++ b/src/less/code.less
@@ -1,9 +1,18 @@
-.hljs {
+.hljs{
   display: block;
   overflow-x: auto;
   padding: 1em;
   color: #166c8b;
   background: #f1f5f8;
+}
+
+code  {
+  padding: 5px;
+  background: #fafbfc;
+  font-size: 16px;
+  color: #2e9eb7;
+  border-radius: 4px;
+  margin: 0 5px;
 }
 
 .hljs-comment,
