--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -34,3 +34,22 @@
 		padding: 12px 14px;
 	}
 }
+
+/* Next & Prev buttons on post pages */
+
+.prev-next-wrap {
+	margin: 0;
+	padding: 0;
+	background: #f0f1f4;
+
+	@media(max-width: 1000px){
+		padding:0 20px;
+	}
+
+	.btn {
+		max-width: 39%;
+		line-height: 1.5;
+		font-size: 1.1em;
+		font-family: montserrat;
+	}
+}
