--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -28,12 +28,16 @@
 				border: 0;
 
 				span {
-					font-size: 12px;
+					font-size: 14px;
 				}
 
 				&:hover {
 					background: @hover-color;
 				}
+			}
+
+			input {
+				font-weight: 100;
 			}
 
 			.gh-subscribe-rss {
@@ -265,7 +269,7 @@
 		.subscribe-email {
 			padding: 15px 5%;
 			width: 90%;
-			font-size: 12px;
+			font-size: 14px;
 			/*color: #ebebeb;*/
 		}
 
