--- a/src/less/global.less
+++ b/src/less/global.less
@@ -5,7 +5,7 @@
 ====================================================*/
 body,
 html {
-	font-family: 'akzidenz', 'proxima-nova',sans-serif;
+	font-family: 'akzidenz', sans-serif;
 	font-size: 14px;
 	color: @text-color;
 	line-height: 1.75em;
@@ -27,11 +27,6 @@ article {
 	p {
 		line-height: 2em;
 	}
-}
-
-section > .container {
-	max-width: 1200px;
-	margin:auto;
 }
 
 strong {
