--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -13,8 +13,49 @@
 		margin: auto;
 	}
 
+	.post-head {
+		margin: 10px 0 20px;
+
+		@media(max-width: 600px){
+			margin: 0 0 20px;
+		}
+
+		.post-title {
+			font-size: 2.5em;
+			line-height: .9;
+			margin: 0;
+			@media(max-width: 600px) {
+				font-size: 1.7em !important;
+			}
+
+			a {
+				color: @text-color-heading;
+				transition: all .2s ease-out;
+
+				&:hover {
+					color: @secondary-color;
+				}
+			}
+		}
+
+		.post-excerpt {
+			margin: 10px auto 0;
+			line-height: 1;
+			font-weight: 600;
+			text-align: left;
+			@media(max-width: 800px) {
+				font-weight: 500;
+				font-size: 1.4em;
+			}
+		}
+	}
+
 	&.featured {
 		order: 0;
+	}
+
+	&.tag-roundup .post-content {
+		display: none;
 	}
 
 	.featured {
@@ -39,32 +80,7 @@
 		}
 	}
 
-	.post-head {
-		margin: 10px 0 20px;
 
-		@media(max-width: 600px){
-			margin: 0 0 20px;
-		}
-
-		.post-title {
-			font-size: 3em;
-			@media(max-width: 600px) {
-				font-size: 2em !important;
-				/*text-align: justify;*/
-			}
-		}
-
-		.post-excerpt {
-			margin: 5px auto 0;
-			line-height: 1;
-			font-weight: 600;
-			text-align: left;
-			@media(max-width: 800px) {
-				font-weight: 500;
-				font-size: 1.3em;
-			}
-		}
-	}
 
 	.kg-post {
 			text-align: justify;
@@ -79,7 +95,7 @@
 	}
 
 	i {
-		margin-right: 8px;
+		margin-right: 10px;
 		font-size: 18px;
 	}
 
@@ -102,8 +118,9 @@
 			display: flex;
 			justify-items: center;
 			margin: auto 0;
-			font-family: 'akzidenz-medium';
+			font-family: 'akzidenz-regular';
 			align-items: center;
+			font-size: 16px;
 
 			i {
 				height: 23px;
@@ -121,7 +138,7 @@
 			&.author {
 				span {
 					font-family: 'akzidenz-regular' !important;
-					color: #8e8e8e;
+					color: #627d90;
 				}
 			}
 
@@ -174,21 +191,17 @@
 		padding: 0 0 10px;
 
 		.btn {
-			font-size: 14px;
+			font-size: 16px;
 			font-weight: 100;
 			text-transform: uppercase;
 			padding: 10px 20px;
 			@media(max-width: 600px) {
-				font-size: 16px;
-				font-weight: 100;
 				padding: 8px 18px;
 			}
 		}
 	}
 
-	.tag-roundup .post-content {
-		display: none;
-	}
+
 
 	.post-content {
 		line-height: 1.5;
@@ -196,12 +209,6 @@
 
 		@media(max-width: 600px) {
 			font-size: 16px;
-		}
-
-		.post-title {
-			@media(max-width: 600px){
-				font-size: 1.7em !important;
-			}
 		}
 	}
 
