--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -68,10 +68,10 @@
 			height: 64px;
 
 			@media(max-width: 800px) {
-				  height: 44px;
-					width: 200px;
-					bottom: auto;
-					top: 30%;
+				height: 44px;
+				width: 65%;
+				bottom: auto;
+				top: 30%;
 			}
 
 			&:hover {
@@ -117,6 +117,7 @@
 		height: auto;
 		background: none;
 	}
+
 	.menu {
 		padding: 0;
 		margin: 30px 40px 0 auto;
@@ -125,7 +126,7 @@
 		width: 300px;
 
 		@media(max-width: 800px) {
-			width: 210px;
+			width: 240px;
 			margin: auto;
 			left: 0;
 			right: 0;
@@ -144,7 +145,7 @@
 				padding: 0;
 				font-family: 'mr-eaves-xl-modern', serif;
 				text-transform: uppercase;
-				font-size: 16px;
+				font-size: 18px;
 				font-weight: 600;
 				transition: all 0.2s ease-out;
 				@media(max-width: 800px) {
