--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -2,6 +2,10 @@
 @import "mixin.less";
 
 .postlist {
+  .tag-description {
+    font-size:14px;
+    line-height: 1.1;
+  }
   @media(max-width: 1000px) {
     padding: 0 20px;
   }
