--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -51,5 +51,9 @@
 		line-height: 1.5;
 		font-size: 1.1em;
 		font-family: montserrat;
+
+		@media(max-width: 800px){
+			font-size: .8em;
+		}
 	}
 }
