--- a/src/less/postheader.less
+++ b/src/less/postheader.less
@@ -21,6 +21,9 @@
       padding: 40px 40px 0 0;
       margin: 0;
       list-style: none;
+      @media(max-width: 800px){
+        padding: 26px 40px 0 0;
+      }
       @media(max-width: 600px) {
         width: 230px;
         padding: 25px 20px;
