--- a/post.hbs
+++ b/post.hbs
@@ -26,7 +26,7 @@
 						{{/primary_tag}}
 						{{#author}}
 							{{#unless profile_image}}
-								<a href="{{url}}" class="meta-item"><i class="fas fa-user" style="width:13px; height: 13px; margin-top: 6px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
+								<a href="{{url}}" class="meta-item"><i class="fas fa-user" style="width:13px; display:inline-block; margin-right:10px;"></i><span>{{slug}}</span></a>
 							{{/unless}}
 							{{#if profile_image}}
 								<a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{slug}}</span></a>
