--- a/src/less/global.less
+++ b/src/less/global.less
@@ -73,9 +73,7 @@ h2 {
 
 .home-template {
 	.main-content {
-		display: flex;
-		justify-content: center;
-		flex-direction: column;
+		display: block;
 	}
 }
 
