--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -105,7 +105,7 @@
 
 	.meta {
 		display: flex;
-		width: 60%;
+		width: 70%;
 		justify-content: space-between;
 		max-width: 400px;
 
@@ -177,6 +177,9 @@
 			.tags {
 				display: none;
 			}
+		}
+		@media(max-width: 600px) {
+			 font-weight: 600;
 		}
 	}
 
