--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -68,18 +68,18 @@
   }
 
   .roundup {
-    color: #7f8aca;
+    color: #666fa5;
 
     i {
-      color: #7f8aca !important;
+      color: #666fa5 !important;
     }
   }
 
   .excel {
-    color: #099c09;
+    color: #136713;
 
     i {
-      color: #099c09 !important;
+      color: #136713 !important;
     }
   }
 
@@ -118,10 +118,10 @@
 
 
   .datascience {
-    color: #1CBBAF;
+    color: #118e84;
 
     i {
-      color: #1CBBAF !important;
+      color: #118e84 !important;
     }
   }
 
@@ -141,5 +141,5 @@
     }
   }
 
-  
+
 }
