--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -6,7 +6,7 @@
 ====================================================*/
 .main-footer {
 	background: linear-gradient(to bottom, rgba(0,255,196,0.2), rgba(41,58,63,0));
-	padding: 35px 12%;
+	padding: 35px 10%;
 	color: white;
 	margin-top: 30px;
 	background-color: #3c465a;
@@ -26,7 +26,7 @@
 
 	.widget {
 		padding: 10px 0;
-		width:25%;
+		width:28%;
 		margin:0;
 
 		.post-title {
@@ -80,12 +80,21 @@
 				transition: all 0.2s ease;
 			}
 
-			.recent-single-post,
+			.recent-single-post {
+				border-bottom: 1px dashed rgba(255,255,255, .1);
+			}
+
 			.single-author {
 				border-bottom: 0;
+			}
+
+			.recent-single-post,
+			.single-author {
 
 				a {
 					margin: 0;
+					text-align: left !important;
+					line-height: 1.3;
 				}
 
 				.post-title,
