--- a/src/less/post.less
+++ b/src/less/post.less
@@ -173,8 +173,8 @@
 			}
 
 			span {
-				font-weight: 200;
-				font-family: 'montserrat';
+				font-weight: 300 !important;
+				font-family: 'Montserrat';
 			}
 
 			i {
