--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -130,10 +130,11 @@
 
 		@media(max-width: 800px) {
 			max-width: 280px;
-			margin: auto;
 			left: 0;
 			right: 0;
-			margin-top: 142px;
+			margin: 135px auto;
+			float: none;
+			padding: 0;
 		}
 
 		li {
