--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -49,8 +49,9 @@
 	.btn {
 		max-width: 39%;
 		line-height: 1.5;
-		font-size: 1.1em;
+		font-size: 1em;
 		font-family: montserrat;
+		font-weight: 300;
 
 		@media(max-width: 800px){
 			font-size: .8em;
