--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -26,7 +26,7 @@
 
 	.widget {
 		padding: 10px 0;
-		width:28%;
+		width:27%;
 		margin:0;
 
 		.post-title {
@@ -57,12 +57,21 @@
 		}
 
 		.tag-cloud {
+			display: flex;
+			flex-direction: row;
+    	flex-wrap: wrap;
+
 			a {
 				border: 0;
-				border-radius: 2px;
-				color: #FFFFFF;
-				background: #3d888c;
-				padding: 7px 15px;
+    border-radius: 2px;
+    color: #fff;
+    background: #3d888c;
+    padding: 5px 12px;
+    display: inline-block;
+    height: fit-content;
+    width: fit-content;
+    margin: 0 10px 10px 0;
+
 
 				&:hover {
 					border: 1px solid @white;
@@ -118,6 +127,9 @@
 				.tags{
 					color: @white;
 					opacity: 0.5;
+					font-size: 0.9em;
+    			margin-top: 5px;
+					font-family: akzidenz,sans-serif;
 
 					a {
 						color: @white;
