--- a/src/less/post.less
+++ b/src/less/post.less
@@ -248,7 +248,7 @@
 		p {
 			line-height: 1.5 !important;
 			font-family: akzidenz;
-			color: #777373;
+			color: #494b56;
 			font-size: 1em;
 			width: auto;
 			margin: 0;
@@ -256,13 +256,12 @@
 			@media (max-width: 800px) {
 				font-size: 1em;
 				text-align: justify;
-				line-height: 1.3 !important;
+				line-height: 1.4 !important;
 			}
 			@media (max-width: 600px) {
 				font-size: .9em;
 				text-align: justify;
-				line-height: 1.6 !important;
-				color: #494b56;
+				line-height: 1.5 !important;
     		font-style: normal;
 			}
 		}
@@ -462,6 +461,10 @@
 			margin: 20px;
 		}
 
+		@media(max-width: 600px) {
+			padding: 30px;
+		}
+
 		.avatar {
 			width: 90px;
 			height: 90px;
@@ -474,7 +477,9 @@
 			float: left;
 
 			@media(max-width: 600px) {
-				margin-right: 20px;
+				width: 80px;
+				height: 80px;
+				margin: 0 15px 15px 0;
 			}
 
 			img {
@@ -490,6 +495,7 @@
 				display: block;
 				line-height: 1em;
 				margin-bottom: 8px;
+				font-size: .9em;
 
 				i {
 					margin-right: 8px;
@@ -515,6 +521,10 @@
 			font-size: 1.5em;
 			margin-bottom: 5px;
 			font-family: 'akzidenz-regular';
+
+			@media(max-width: 600px) {
+				 font-size: 1.3em;
+			}
 
 			a {
 				&:hover {
