--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -7,11 +7,7 @@
     line-height: 1.1;
   }
   @media(max-width: 1000px) {
-    padding: 0 20px;
-  }
-
-  @media(max-width: 1000px) {
-    padding: 20px;
+    padding: 0 0 0 10px;
   }
 
   @media(max-width: 600px) {
