--- a/src/less/postlist.less
+++ b/src/less/postlist.less
@@ -10,8 +10,9 @@
     padding: 0 0 0 10px;
   }
 
-  @media(max-width: 600px) {
-    padding: 15px;
+  @media(max-width: 800px) {
+    padding: 0;
+    margin:15px;
   }
 
   &:last-child{
