--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -92,10 +92,10 @@
   }
 
   .pandas {
-    color: #d65daf;
+    color: #c03694;
 
     i {
-      color: #d65daf !important;
+      color: #c03694 !important;
     }
   }
 
@@ -142,10 +142,10 @@
   }
 
   .statistics {
-    color: #34a9dd;
+    color: #34b27a;
 
     i {
-      color: #34a9dd;
+      color: #34b27a;
     }
   }
 }
