--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -32,6 +32,8 @@
 	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.min.js"}}"></script>
 	<!--<script src="{{asset "/js/tags.js"}}"></script>-->
+	<script src="{{asset "/js/includes/previews.js"}}"></script>
+
 
 
 </body>
