--- a/partials/post_footer.hbs
+++ b/partials/post_footer.hbs
@@ -27,10 +27,11 @@
 	{{ghost_foot}}
 	<!-- scripts -->
 
+
 	<script src="{{asset "/js/includes/jquery.fitvids.js"}}"></script>
 	<script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.min.js"}}"></script>
-	{{!--{{#has tag="roundup"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}--}}
+	{{!--{{#has author="Matthew Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}--}}
 	{{> analytics}}
 </body>
 </html>
