--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -23,6 +23,7 @@
 @import "tags.less";
 @import 'githubcard.less';
 @import 'kanban.less';
+@import 'code.less';
 /*====================================================
 	fonts
 ====================================================*/
