--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -71,5 +71,8 @@
 		</div>
 	</div>
 </section>
-<script src="{{asset "/js/includes/jquery-ui.min.js"}}"></script>
+<script src="{{asset '/js/includes/jquery-ui.min.js'}}"></script>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<script src="{{asset '/js/includes/gh-profile-card.min.js'}}"></script>
+
 <!-- end site's main content area -->
